--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="text-box">
   <h1>Media and Information Literacy</h1>
   <p1>Output in 2nd Quarter: Historical Timeline of Traditional To New Media Information</p1><br>
-  <p>Website created by: Jherson Bartolay</p><P>Co-partner in this project: </P><br>
+  <p>Website created by: Jherson Bartolay</p><P>Co-partner in this project: Sarah Mae Bernas </P><br>
   <a href="about.html.html"><button class="hero-btn">Link Start</button></a>
 </div>  
 
