--- a/abstract.html.html
+++ b/abstract.html.html
@@ -23,11 +23,11 @@
       </div>
     </nav>
     <section>
-      <div>
         <img  class="social22" src="img/social media.jfif"> 
-        <p></p>
-
-      </div>
+        <div class="div-for-abstract">
+           <p class="paragraph33">It started from the early human, who live their life kind of tough unlike nowadays that everything is one click away, no hussle and everything can be make into reality just by using internet not doing it personally or face to face. Some instances, we order foods, things, and various stuff and we can already buy it, unlike few years back then we personally came to convenience or market to buy our needs. This blog is all about the history and the timeline of various innovation that happens through the evolution of time, it was way back 35,000 before common era that everything is still develop and still discovering the industrial world. Us humans are social being. That being said in order for us to live in the society communication and interaction is needed, without connection to others is nearly impossible, that's why the interaction and communication start everthing up and lead us into this information age, from the early humans who needs to communicate and start a conversation by the use of finger and stone leads us into, written scriptures, into technology where in everything is digital. This emphasizes the timeline of traditioinal media into new media, where traditional does not use internet and the new media that uses internet that makes everything more easeir. Internet can't be too dangerous to society if we consumers and also producers uses internet and technology uses everthing well, in this world of informational age being and information literacy is highly needed in our daily life, therefore i encourage you to read everything i put in content so that we can be knowledgeable on the history of media.</p>
+        </div>
+      
     </section>  
       
    </section>
